--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = healthai
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.healthai
+PRODUCT_BUNDLE_IDENTIFIER = com.healthai.app
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
