--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   calendar_date_picker2: ^1.1.7
+  cloud_firestore: ^5.4.2
   cupertino_icons: ^1.0.8
+  firebase_auth: ^5.3.0
+  firebase_core: ^3.5.0
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.1.0
+  flutter_hooks: ^0.20.5
+  go_router: ^14.2.8
+  google_generative_ai: ^0.4.6
+  hooks_riverpod: ^2.5.2
   intl: ^0.19.0
   speech_to_text: ^7.0.0
   timeago: ^3.7.0
