--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   flutter_hooks: ^0.20.5
+  flutter_launcher_icons: ^0.14.1
   flutter_local_notifications: ^17.2.3
   flutter_markdown: ^0.7.3+2
   go_router: ^14.2.8
@@ -77,6 +78,8 @@ flutter:
     - images/
     - asset/icon/
     - asset/audio/
+    - asset/Logo.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
